--- a/balance-sheet.html
+++ b/balance-sheet.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Journal Entry - Bondhon Enterprise</title>
+    <title>Balance Sheet - Bondhon Enterprise</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,21 +21,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <style>
-      :root {
-        --bs-primary-rgb: 71, 121, 222;
-        --bs-body-bg-rgb: 237, 242, 247;
-        --bs-body-color-rgb: 52, 71, 103;
-        --bs-font-sans-serif: "Poppins", sans-serif;
-      }
-
       body {
-        background-color: rgb(var(--bs-body-bg-rgb));
-        font-family: var(--bs-font-sans-serif);
-      }
-
-      .main-content {
-        margin-left: 250px;
-        padding: 90px 30px 30px 30px;
+        background-color: #f8f9fa;
       }
 
       .sidebar {
@@ -45,83 +32,54 @@
         bottom: 0;
         width: 250px;
         padding: 70px 0 0;
-        background-color: #fff;
+        background-color: #f8f9fa;
+        color: #212529;
         height: 100vh;
         overflow-y: auto;
-        border-right: 1px solid #dee2e6;
-        z-index: 1000;
       }
 
       .sidebar .nav-link {
-        color: #344767;
-        padding: 12px 20px;
-        font-weight: 500;
-        font-size: 0.9rem;
+        color: #212529;
+        padding: 10px 20px;
       }
 
       .sidebar .nav-link:hover,
       .sidebar .nav-link.active {
-        color: #0d6efd;
-        background-color: #e9ecef;
-        border-radius: 0.375rem;
-        margin: 0 1rem;
-        padding: 12px;
+        color: #212529;
+        background-color: #e4e5e6;
       }
 
-      .sidebar .nav-link.active {
-        color: white;
-        background-color: rgb(var(--bs-primary-rgb));
-      }
-
-      .sidebar .nav-link .fa-fw {
+      .sidebar .nav-link .fa {
         width: 20px;
         text-align: center;
-        margin-right: 12px;
-        font-size: 1rem;
+        margin-right: 10px;
       }
 
       .nav-sub-link {
-        padding-left: 52px !important;
-        font-size: 0.85em !important;
-        font-weight: 400 !important;
-        background-color: transparent !important;
+        margin-left: 50px;
       }
 
-      .nav-sub-link:hover,
-      .nav-sub-link.active {
-        color: rgb(var(--bs-primary-rgb)) !important;
+      .main-content {
+        margin-left: 250px;
+        padding: 20px;
+        padding-top: 70px;
       }
 
-      .nav-sub-link.active {
-        font-weight: 600 !important;
+      .navbar {
+        z-index: 1030;
       }
 
-      h1,
-      .h1,
-      h2,
-      .h2,
-      h3,
-      .h3 {
-        font-weight: 600;
-        color: #344767;
+      .navbar-brand {
+        font-weight: 700;
       }
-
-      .card {
-        border: none;
-        border-radius: 0.75rem;
-        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-          0 2px 4px -2px rgba(0, 0, 0, 0.1);
+      /* Custom styles for Balance Sheet */
+      .category-header {
+        font-weight: bold;
+        background-color: #f0f0f0;
       }
-
-      .card-header {
-        background-color: #fff;
-        border-bottom: 1px solid #dee2e6;
-        font-weight: 600;
-      }
-
-      .form-control-plaintext {
-        padding-left: 0.75rem;
-        padding-right: 0.75rem;
+      .total-row th {
+        border-top: 2px solid #000 !important;
+        font-weight: bold;
       }
     </style>
   </head>
@@ -142,7 +100,6 @@
     </nav>
 
     <!-- Sidebar -->
-
     <div class="sidebar">
       <nav class="nav flex-column">
         <a class="nav-link active" href="dashboard.html"
@@ -332,69 +289,67 @@
 
     <main class="main-content">
       <div class="container-fluid">
-        <h1 class="h3 mb-4">Create Manual Journal Entry</h1>
-        <div class="card">
-          <div class="card-body p-4">
-            <div class="row mb-4">
+        <h1 class="h3 mb-4">Balance Sheet</h1>
+        <div class="card mb-4">
+          <div class="card-body">
+            <div class="row g-3 align-items-end">
               <div class="col-md-3">
-                <label class="form-label">Date</label
-                ><input type="date" class="form-control" id="journalDate" />
+                <label for="asOfDate" class="form-label">As of Date</label>
+                <input type="date" class="form-control" id="asOfDate" />
               </div>
-              <div class="col-md-9">
-                <label class="form-label">Narration / Description</label
-                ><input
-                  type="text"
-                  class="form-control"
-                  placeholder="e.g., Owner's capital investment"
-                />
+              <div class="col-md-2">
+                <button class="btn btn-primary w-100" id="generateBtn">
+                  Generate
+                </button>
               </div>
             </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header" id="report-header">Balance Sheet</div>
+          <div class="card-body">
             <div class="table-responsive">
-              <table class="table table-bordered" id="journal-table">
-                <thead class="table-light">
+              <table class="table table-sm">
+                <thead>
                   <tr>
-                    <th style="width: 50%">Account</th>
-                    <th style="width: 20%">Debit</th>
-                    <th style="width: 20%">Credit</th>
-                    <th class="text-center" style="width: 10%">Action</th>
+                    <th style="width: 50%">Assets</th>
+                    <th class="text-end" style="width: 25%">Amount (৳)</th>
+                    <th style="width: 25%"></th>
                   </tr>
                 </thead>
-                <tbody id="journal-tbody"></tbody>
-                <tfoot class="table-light">
-                  <tr>
-                    <td class="text-end"><strong>Totals:</strong></td>
-                    <td>
-                      <input
-                        type="text"
-                        id="totalDebit"
-                        class="form-control-plaintext fw-bold text-success"
-                        value="৳ 0.00"
-                        readonly
-                      />
-                    </td>
-                    <td>
-                      <input
-                        type="text"
-                        id="totalCredit"
-                        class="form-control-plaintext fw-bold text-danger"
-                        value="৳ 0.00"
-                        readonly
-                      />
-                    </td>
-                    <td>
-                      <div id="balance-status" class="text-center"></div>
-                    </td>
+                <tbody id="assets-tbody">
+                  <!-- Asset rows will be injected here -->
+                </tbody>
+                <tfoot>
+                  <tr class="table-dark">
+                    <th>Total Assets</th>
+                    <th class="text-end" id="totalAssets"></th>
+                    <th></th>
                   </tr>
                 </tfoot>
               </table>
             </div>
-            <button class="btn btn-primary btn-sm" id="addRowBtn">
-              <i class="fa fa-plus me-1"></i> Add Account
-            </button>
-            <div class="text-end mt-4">
-              <button class="btn btn-success" id="postEntryBtn" disabled>
-                <i class="fa fa-check-circle me-1"></i> Post Entry
-              </button>
+            <hr class="my-4" />
+            <div class="table-responsive">
+              <table class="table table-sm">
+                <thead>
+                  <tr>
+                    <th style="width: 50%">Liabilities & Equity</th>
+                    <th class="text-end" style="width: 25%">Amount (৳)</th>
+                    <th style="width: 25%"></th>
+                  </tr>
+                </thead>
+                <tbody id="liabilities-equity-tbody">
+                  <!-- Liabilities and Equity rows will be injected here -->
+                </tbody>
+                <tfoot>
+                  <tr class="table-dark">
+                    <th>Total Liabilities & Equity</th>
+                    <th class="text-end" id="totalLiabilitiesEquity"></th>
+                    <th></th>
+                  </tr>
+                </tfoot>
+              </table>
             </div>
           </div>
         </div>
@@ -402,69 +357,105 @@
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const e = document.getElementById("addRowBtn"),
-          t = document.getElementById("journal-tbody"),
-          n = document.getElementById("postEntryBtn"),
-          a = [
-            "Cash",
-            "Bank Account",
-            "Accounts Receivable",
-            "Inventory",
-            "Office Equipment",
-            "Accounts Payable",
-            "Sales Revenue",
-            "Rent Expense",
-            "Owner's Capital",
-          ];
-        function d() {
-          return a.map((e) => `<option value="${e}">${e}</option>`).join("");
-        }
-        function l() {
-          const e = document.createElement("tr");
-          (e.innerHTML = `\n                    <td><select class="form-select account-select">${d()}</select></td>\n                    <td><input type="number" class="form-control debit-input" placeholder="0.00" min="0"></td>\n                    <td><input type="number" class="form-control credit-input" placeholder="0.00" min="0"></td>\n                    <td class="text-center"><button class="btn btn-sm btn-outline-danger remove-row-btn"><i class="fa fa-trash"></i></button></td>\n                `),
-            t.appendChild(e);
-        }
-        function o() {
-          let e = 0,
-            a = 0;
-          t.querySelectorAll("tr").forEach((t) => {
-            (e += parseFloat(t.querySelector(".debit-input").value) || 0),
-              (a += parseFloat(t.querySelector(".credit-input").value) || 0);
-          }),
-            (document.getElementById("totalDebit").value = `৳ ${e.toFixed(2)}`),
-            (document.getElementById("totalCredit").value = `৳ ${a.toFixed(
-              2
-            )}`);
-          const d = document.getElementById("balance-status");
-          e === a && e > 0
-            ? ((d.innerHTML =
-                '<i class="fa fa-check-circle text-success" title="Balanced"></i>'),
-              (n.disabled = !1))
-            : ((d.innerHTML =
-                '<i class="fa fa-times-circle text-danger" title="Unbalanced"></i>'),
-              (n.disabled = !0));
-        }
-        (document.getElementById("journalDate").valueAsDate = new Date()),
-          e.addEventListener("click", l),
-          t.addEventListener("click", (e) => {
-            e.target.closest(".remove-row-btn") &&
-              (e.target.closest("tr").remove(), o());
-          }),
-          t.addEventListener("input", (e) => {
-            const t = e.target.closest("tr");
-            e.target.classList.contains("debit-input") &&
-              (t.querySelector(".credit-input").value = ""),
-              e.target.classList.contains("credit-input") &&
-                (t.querySelector(".debit-input").value = ""),
-              o();
-          }),
-          n.addEventListener("click", () => {
-            alert("Journal entry posted successfully!"), location.reload();
-          }),
-          l(),
-          l(),
-          o();
+      // Set the default date to today
+      document.getElementById("asOfDate").valueAsDate = new Date();
+
+      document.getElementById("generateBtn").addEventListener("click", () => {
+        // --- Sample Data ---
+        // In a real application, you would fetch and calculate this data
+        const assets = {
+          current: [
+            { account: "Cash", amount: 4785000 },
+            { account: "Accounts Receivable", amount: 3231000 },
+            { account: "Inventory", amount: 25500000 },
+            { account: "Bank Account", amount: 200000 },
+          ],
+          nonCurrent: [
+            { account: "Furniture & Fixtures", amount: 1500000 },
+            { account: "Vehicles", amount: 2500000 },
+          ],
+        };
+
+        const liabilities = {
+          current: [
+            { account: "Accounts Payable", amount: 1800000 },
+            { account: "Short-term Loans", amount: 500000 },
+          ],
+          nonCurrent: [{ account: "Long-term Bank Loan", amount: 4000000 }],
+        };
+
+        const equity = [
+          { account: "Owner's Capital", amount: 20155000 },
+          { account: "Retained Earnings", amount: 11261000 }, // This makes the sheet balance
+        ];
+
+        const assetsTbody = document.getElementById("assets-tbody");
+        const liabilitiesEquityTbody = document.getElementById(
+          "liabilities-equity-tbody"
+        );
+        const asOfDate = document.getElementById("asOfDate").value;
+
+        // Clear previous report data
+        assetsTbody.innerHTML = "";
+        liabilitiesEquityTbody.innerHTML = "";
+
+        // Update report header
+        document.getElementById(
+          "report-header"
+        ).textContent = `Balance Sheet as of ${asOfDate || "Today"}`;
+
+        // --- Populate Assets ---
+        let totalAssets = 0;
+        assetsTbody.innerHTML += `<tr class="category-header"><td colspan="3">Current Assets</td></tr>`;
+        assets.current.forEach((item) => {
+          assetsTbody.innerHTML += `<tr><td>${
+            item.account
+          }</td><td class="text-end">${item.amount.toLocaleString()}</td><td></td></tr>`;
+          totalAssets += item.amount;
+        });
+
+        assetsTbody.innerHTML += `<tr class="category-header"><td colspan="3">Non-Current Assets</td></tr>`;
+        assets.nonCurrent.forEach((item) => {
+          assetsTbody.innerHTML += `<tr><td>${
+            item.account
+          }</td><td class="text-end">${item.amount.toLocaleString()}</td><td></td></tr>`;
+          totalAssets += item.amount;
+        });
+
+        // --- Populate Liabilities & Equity ---
+        let totalLiabilitiesEquity = 0;
+
+        // Liabilities
+        liabilitiesEquityTbody.innerHTML += `<tr class="category-header"><td colspan="3">Current Liabilities</td></tr>`;
+        liabilities.current.forEach((item) => {
+          liabilitiesEquityTbody.innerHTML += `<tr><td>${
+            item.account
+          }</td><td class="text-end">${item.amount.toLocaleString()}</td><td></td></tr>`;
+          totalLiabilitiesEquity += item.amount;
+        });
+
+        liabilitiesEquityTbody.innerHTML += `<tr class="category-header"><td colspan="3">Non-Current Liabilities</td></tr>`;
+        liabilities.nonCurrent.forEach((item) => {
+          liabilitiesEquityTbody.innerHTML += `<tr><td>${
+            item.account
+          }</td><td class="text-end">${item.amount.toLocaleString()}</td><td></td></tr>`;
+          totalLiabilitiesEquity += item.amount;
+        });
+
+        // Equity
+        liabilitiesEquityTbody.innerHTML += `<tr class="category-header"><td colspan="3">Owner's Equity</td></tr>`;
+        equity.forEach((item) => {
+          liabilitiesEquityTbody.innerHTML += `<tr><td>${
+            item.account
+          }</td><td class="text-end">${item.amount.toLocaleString()}</td><td></td></tr>`;
+          totalLiabilitiesEquity += item.amount;
+        });
+
+        // --- Display Totals ---
+        document.getElementById("totalAssets").textContent =
+          totalAssets.toLocaleString();
+        document.getElementById("totalLiabilitiesEquity").textContent =
+          totalLiabilitiesEquity.toLocaleString();
       });
     </script>
   </body>
